fix bug 655578, some custom header filters not working r=rkent